2013-11-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/qtterminal/qt_term.cpp (qt_set_color):  Do not change line type
	just because a color request specifies a linetype color.
	Bugfix.

2013-11-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c src/axis.h src/eval.c src/save.c src/set.c src/show.c:
	Replace axis_defaults[index].name with axis_name(index) everywhere.
	Currently this is a macro that expands to the same thing, but now
	it is ready to be replaced by something more complicated.

	* src/unset.c (unset_tics): Change the flag for unset all to -1.

	* src/set.c (set_range):  We already accept "set xrange [*:*] noextend"
	as a more intuitive alternative to "set auto xfix".  Now we also accept
	"set xrange [*:*] extend" to go back to the default behavior.

	* src/save.c (save_range): Due to a typo, the fix/nofix extend/noextend
	axis property was not written by the "save" command.

2013-10-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot3d.c (get_3ddata): Pass through Inf and NaN to image code when
	the pixel value is presented in column 4. The column 3 (z) case was
	already handled.

2013-10-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c(lp_parse): Fix bug involving color assignment to contours.
	Unfortunately this negates a previous fix that allowed explicit surface
	colors in a hidden3d plot to implicitly do "set hidden3d offset 0".

	* src/qtterminal/QtGnuplotScene.cpp: gnuplot_qt can handle hotkey 'i'
	in persist mode.  Revise the timing code for responding to mouse button
	press/release (needed for Qt5).

2013-10-26  Thomas Bleher <tbleher@gmx.de>

	* src/qtterminal/qt_term.cpp:  Change the Qt terminal to only create its
	data when initialized (to avoid the Static Initialization Order Fiasco)
	and to destroy its data in a gnuplot atexit handler.

2013-10-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readascii df_readmatrix):  If the first field of a