@@ -671,7 +671,6 @@ void QtGnuplotScene::mousePressEvent(QGraphicsSceneMouseEvent* event)
 	else if (event->button()== Qt::MidButton)   button = 2;
 	else if (event->button()== Qt::RightButton) button = 3;
 
-	m_watches[button].start();	/* Count down time to ReleaseEvent */
 	m_eventHandler->postTermEvent(GE_buttonpress, 
 			int(event->scenePos().x()), int(event->scenePos().y()), 
 			button, 0, 0); /// @todo m_id
@@ -743,13 +742,18 @@ void QtGnuplotScene::mouseReleaseEvent(QGraphicsSceneMouseEvent* event)
 	else if (event->button()== Qt::MidButton)   button = 2;
 	else if (event->button()== Qt::RightButton) button = 3;
 
-	// If the press/release events get out of order or if we see a very
+	// FIXME: If the press/release events get out of order or if we see a very
 	// fast double-click then the program errors out during event processing.
-	// So we enforce a minimum time between press/release.
-	int time = m_watches[button].elapsed();
-	if (time > 100)
+	// Unfortunately I have not been able to reliably filter out these spurious events
+	// by setting a minimum time window.  Maybe an explicit interlock would work?
+	qint64 time = 0;
+	if (m_watches[button].isValid())
+		time = m_watches[button].elapsed();
+	if (time == 0 || time > 300) {
 		m_eventHandler->postTermEvent(GE_buttonrelease,
 			int(event->scenePos().x()), int(event->scenePos().y()), button, time, 0);
+		m_watches[button].start();
+	}
 
 	/* Check for click in one of the keysample boxes */
 	int i = m_key_boxes.count();
