@@ -4,6 +4,12 @@
 	just because a color request specifies a linetype color.
 	Bugfix.
 
+	* src/qtterminal/QtGnuplotScene.cpp (mouseReleaseEvent):
+	Revert mouse click timing change of 27-Oct-2013 but add a check for
+	valid timer status.  This greatly reduces the number of spurious events
+	that are passed through to the main program.
+	Bug #1300
+
 2013-11-06  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/axis.c src/axis.h src/eval.c src/save.c src/set.c src/show.c:
